package com.example.bbtraveling.domain

data class Activity(
    val time: String,
    val title: String,
    val location: String,
    val costEur: Double
)
